app/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: 5elementsofai
  name: app-service
  labels:
    service: app
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 8080
      targetPort: 8080
